# orderbook-latency-study

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: benchmark_main.cpp  clock.hpp  percentiles.hpp  perf_counters.hpp  replay.hpp  sweep.hpp
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
data/: README.md
docs/: hardware.md  methodology.md  results.md
include/obls/: book_branchless.hpp  book_concept.hpp  book_linear.hpp  book_map.hpp  book_sorted_vector.hpp  order_index.hpp  types.hpp
results/: depth_sweep.csv
tests/: test_against_lobster.cpp  test_book_equivalence.cpp  test_clock.cpp
